@@ -1,5 +1,8 @@
 2014-12-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/pcx.c (ReadPCXImage): Validate that header bytes per line
+	is sufficient to contain the indicated data.
+
 	* coders/pdb.c (ReadPDBImage): Fix indexes array overrun for 2 and
 	4-bit PDB image files.
 
